--- a/clickup_payload_import/wizard/import_clickup_wizard_view.xml
+++ b/clickup_payload_import/wizard/import_clickup_wizard_view.xml
@@ -8,15 +8,31 @@
             <form string="Import Clickup Project">
                 <sheet>
                     <group>
-                        <field name="clickup_project_id" />
+                        <field name="clickup_import_type" />
+                        <field
+                            name="clickup_project_id"
+                            attrs="{'invisible': [('clickup_import_type', '!=', 'importproject')]}"
+                        />
+                        <field
+                            name="clickup_folder_id"
+                            attrs="{'invisible': [('clickup_import_type', '!=', 'importprojects')]}"
+                        />
                         <field name="clickup_api_key" />
                     </group>
                     <footer>
                         <button
                             class="btn-primary"
-                            name="action_on_click_import"
-                            string="Import"
+                            name="action_on_click_import_project"
+                            string="Import Project"
                             type="object"
+                            attrs="{'invisible': [('clickup_import_type', '!=', 'importproject')]}"
+                        />
+                        <button
+                            class="btn-primary"
+                            name="action_on_click_import_projects"
+                            string="Import Projects"
+                            type="object"
+                            attrs="{'invisible': [('clickup_import_type', '!=', 'importprojects')]}"
                         />
                         <button
                             class="btn-secondary"
