[WIP][T6268]Add button in project view to update project directly-BAD-PAA

--- a/clickup_payload_import/wizard/import_clickup_wizard_view.xml
+++ b/clickup_payload_import/wizard/import_clickup_wizard_view.xml
@@ -8,7 +8,7 @@
             <form string="Import Clickup Project">
                 <sheet>
                     <group>
-                        <field name="clickup_import_type" />
+                        <field name="clickup_import_type" widget="radio"/>
                         <field
                             name="clickup_project_id"
                             attrs="{'invisible': [('clickup_import_type', '!=', 'importproject')]}"
