--- a/clickup_payload_import/views/project_inherited_view.xml
+++ b/clickup_payload_import/views/project_inherited_view.xml
@@ -4,13 +4,18 @@
     <record id="inherit_project_form_view" model="ir.ui.view">
         <field name="name">Project Inherit Form</field>
         <field name="model">project.project</field>
-        <field name="inherit_id" ref="project.edit_project" />
+        <field name="inherit_id" ref="project.edit_project"/>
         <field name="arch" type="xml">
+            <header>
+                <button attrs="{'invisible': [('external_id', '=', False)]}" class="btn-primary" name="update_project" string="Update Project Now" type="object"/>
+            </header>
             <xpath expr="//field[@name='name']" position="after">
                 <div>
                     <label class="oe_inline" for="external_id">External Id</label>
                     <h3>
-                        <field name="external_id" />
+                        <field name="external_id"/>
+                        <br/>
+                        <field invisible="1" name="api_token"/>
                     </h3>
                 </div>
             </xpath>
@@ -20,10 +25,10 @@
     <record id="inherit_project_task_form_view" model="ir.ui.view">
         <field name="name">Project Task Inherit Form</field>
         <field name="model">project.task</field>
-        <field name="inherit_id" ref="project.view_task_form2" />
+        <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='project_id']" position="before">
-                <field name="external_id" />
+                <field name="external_id"/>
             </xpath>
         </field>
     </record>
